@@ -76,7 +76,15 @@ impl_bonobo_ui_sync_status_state (BonoboUISync     *sync,
 
 	if (!strcmp (name, "main")) {
 		const char *id_str;
+		const char *resize_grip;
 
+		resize_grip = bonobo_ui_node_peek_attr (node, "resize_grip");
+
+		if (resize_grip) {
+			gtk_statusbar_set_has_resize_grip (msync->main_status,
+							   atoi (resize_grip));
+		}
+		
 		id_str = bonobo_ui_engine_node_get_id (sync->engine, node);
 
 		msync->main_status = GTK_STATUSBAR (widget);
@@ -135,8 +143,9 @@ impl_bonobo_ui_sync_status_build (BonoboUISync     *sync,
 		return NULL;
 
 	if (!strcmp (name, "main")) {
-
 		widget = gtk_statusbar_new ();
+		
+		/* We disable the resize grip by default */
 		gtk_statusbar_set_has_resize_grip (
 			GTK_STATUSBAR (widget), FALSE);
 
