@@ -1,3 +1,15 @@
+2001-12-29  Anders Carlsson  <andersca@gnu.org>
+
+	* doc/ui-xml.txt (Example): Update docs.
+
+	* bonobo/bonobo-ui-sync-status.c (impl_bonobo_ui_sync_status_state): 
+	Check for resize_grip property.
+	(impl_bonobo_ui_sync_status_build): Likewise.
+
+	* bonobo/bonobo-ui-sync-toolbar.c (cmd_get_toolbar_image): 
+	Use GTK_ICON_SIZE_LARGE_TOOLBAR since that's what everyone
+	else uses.
+
 2001-12-28  Jens Finke <jens@triq.net>
 
 	* bonobo/bonobo-property-control.c
